# bolt

./: README.md  _config.yml  about.html  index.html  links.html  links.html~  params.json
CMake/: FindMySQL.cmake  FindMySQL.cmake~
Tests/: CMakeLists.txt  build.bat
Tests/Resourses/: ClassMysqlQuery.sql
Tests/src/boltmysql/: boltmysql.cpp
Tests/src/server/: mysql_handler.cpp
_includes/: footer.html  greeting.html  header.html
_layouts/: default.html
_posts/azure/: 2014-09-23-Create-Table.md  2014-09-23-Delete-Entity.md  2014-09-23-Delete-Table.md  2014-09-23-Insert-Entity.md  2014-09-23-Query-Entities.md  2014-09-23-Query-Tables.md
_site/: about.html  index.html  links.html  list.html  projects.html
_site/2013/12/04/: Samples.html
_site/2014/09/23/: Create-Table.html  Delete-Entity.html  Delete-Table.html  Insert-Entity.html  Query-Entities.html  Query-Tables.html
_site/css/: hc.css
_site/images/: showcase.xcf
_site/jekyll/testing/2013/12/09/: What-is-this-anyway.html
_site/jekyll/update/2013/11/09/: welcome-to-jekyll.html
adminconsole/Adminpanel/: Adminpanel.sln
adminconsole/Adminpanel/Adminpanel/: Adminpanel.cpp  Adminpanel.vcxproj  Adminpanel.vcxproj.filters  Connection.cpp  Connection.h  Permissions.cpp  Permissions.h  ReadMe.txt  User.cpp  User.h  sha256.cpp  stdafx.cpp
adminconsole/Adminpanel/Adminpanel/x64/Debug/: Adminpanel.pch  vc120.idb
adminconsole/Adminpanel/Adminpanel/x64/Debug/Adminpanel.tlog/: Adminpanel.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
adminconsole/Adminpanel/ipch/adminpanel-ed7e678c/: adminpanel-40e09ce3.ipch
adminconsole/Adminpanel/x64/Debug/: Adminpanel.ilk
bolt/: CMakeLists.txt  build.bat
bolt/auth/include/: authenticate.hpp  connection.hpp  permissions.hpp  sha256.hpp  signature.hpp  user.hpp
bolt/auth/include/cryptlite/: base64.h  hmac.h  sha256.h
bolt/auth/src/: Connection.cpp  Signature.cpp  User.cpp  authenticate.cpp  permissions.cpp  sha256.cpp
bolt/server/include/: ahttpdelete.hpp  ahttppost.hpp  azure_handler.hpp  dispatch.hpp  header_utils.hpp  message_types.hpp  metadata.hpp  mhttpdelete.hpp  mhttppost.hpp  mysql_handler.hpp  string_utils.hpp  threadpool.hpp  url_utils.hpp  whole_handler.hpp  winbservice.hpp  winservice_base.hpp  winservice_installer.hpp
bolt/server/src/: ahttpdelete.cpp  ahttppost.cpp  azure_handler.cpp  dispatch.cpp  header_utils.cpp  main.cpp  metadata.cpp  mhttpdelete.cpp  mhttppost.cpp  mysql_handler.cpp  string_utils.cpp  url_utils.cpp  whole_handler.cpp  winbservice.cpp  winservice_base.cpp  winservice_installer.cpp
casablanca/: CMakeLists.txt  CMakeLists.txt~  build.bat
conf/: bolt_config.cfg
css/: hc.css~
global/includes/: configuration.hpp  logger.hpp
global/src/: configuration.cpp
profiling/: Report - After optimizing Query using deque 140901.vsps  Report - After optimizing by reducing object initilization 140901.vsps  Report140901.vsps
storage/: CMakeLists.txt  build.bat
storage/azure/include/: azure_connection.h  azure_entity.h  azure_query.h  azure_table.h
storage/azure/src/: azure_connection.cpp  azure_entity.cpp  azure_query.cpp  azure_table.cpp
storage/driver.azure/include/was/: core.h
storage/driver.azure/include/wascore/: basic_types.h
storage/driver.azure/src/: async_semaphore.cpp  authentication.cpp  basic_types.cpp  blob_request_factory.cpp  blob_response_parsers.cpp  cloud_blob.cpp  cloud_blob_client.cpp  cloud_blob_container.cpp  cloud_blob_directory.cpp  cloud_blob_istreambuf.cpp  cloud_blob_ostreambuf.cpp  cloud_blob_shared.cpp  cloud_block_blob.cpp  cloud_client.cpp  cloud_core.cpp  cloud_page_blob.cpp  cloud_queue.cpp  cloud_queue_client.cpp  cloud_queue_message.cpp  cloud_storage_account.cpp  cloud_table.cpp  cloud_table_client.cpp  entity_property.cpp  hash_windows.cpp  logging_windows.cpp  mime_multipart_helper.cpp  navigation.cpp  operation_context.cpp  protocol_json.cpp  protocol_xml.cpp  queue_request_factory.cpp  request_factory.cpp  request_result.cpp  response_parsers.cpp  retry_policies.cpp  shared_access_signature.cpp  table_query.cpp  table_request_factory.cpp  table_response_parsers.cpp  util.cpp  (+2 more)
storage/mysql/include/: mysql_connection.h  mysql_database.h  mysql_delete.h  mysql_entity.h  mysql_incognito_entity.h  mysql_property.h  mysql_query.h  mysql_result.h  mysql_table.h  mysql_table_entity.h  mysql_update.h  table.h
storage/mysql/src/: mysql_connection.cpp  mysql_database.cpp  mysql_delete.cpp  mysql_entity.cpp  mysql_insert.cpp  mysql_property.cpp  mysql_query.cpp  mysql_table.cpp  mysql_update.cpp
